--- a/mirza_baig_landing_page.html
+++ b/mirza_baig_landing_page.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="p:domain_verify" content="2cc9ca152ef45f6f20065a875939a917"/>
     <title>Mirza Baig's Amazon Finds</title>
     <style>
         body {
